# mlops-training

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: CLAUDE.md  Fiches de TP — Cours MLOps.md
notebooks/: 01_exploration.ipynb
src/api/: app.py  config.yaml
src/frontend/: app.py  config.yaml
src/training/: data.py  features.py  model.py  train.py
tests/: test_data.py
