[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "training"
version = "0.1.0"
description = "MLOps training project"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn",
    "pandas",
    "jupyter",
    "matplotlib",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/training"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
